# cifar10-resnet-lightning

./: .gitignore  LICENSE  README.md  convert_checkpoint.py  convert_checkpoint_to_safetensors.py  pyproject.toml  runner.py
configs/: training.yaml
src/lightning_resnet/: resnet18.py
