[project]
name = "resnet-lightning"
version = "0.3.1"

# TODO min,max
dependencies = [
    "lightning==2.3.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "wandb==0.17.2",
    "lightning-bolts @ git+https://github.com/lannelin/lightning-bolts.git@lightning2",
    "jsonargparse[signatures]>=4.27.7",
    "safetensors==0.4.3"
]

[tool.black]
line-length = 80
include = '\.pyi?$'

[tool.isort]
profile = "black"
